--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,10 @@
 	"name": "Script Switch",
 	"version": "1.0",
 	"description":"A Firefox extension providing a toggle switch / shortcut to enable or disable javascript.",
-	"content_scripts":[{
-		"matches": ["*://*"],
-		"js": ["script_switch.js"]
-	}]
+	"content_scripts":[
+	{
+			"matches": ["*://*.mozilla.org/*"],
+			"js": ["script_switch.js"]
+		}
+	]
 }
