--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
 	"background": {
 		"scripts": ["background.js"]
 	},
-	"content_scripts": {
+	"content_scripts": [{
 		"matches": ["<all_urls>"],
 		"js": ["content.js"],
 		"all_frames": true
-	}
+	}]
 }
