Add contentSettings to permissions

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
 	"version": "1.0",
 	"description": "A Firefox extension providing a toggle switch / shortcut to enable or disable javascript.",
 	"permissions": [
+		"contentSettings",
 		"webRequest",
 		"webRequestBlocking",
 		"<all_urls>"
