--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,13 @@
 		"matches": ["<all_urls>"],
 		"js": ["content.js"],
 		"all_frames": true
-	}]
+	}],
+	"icons": {
+		"48": "icons/on.svg",
+		"96": "icons/on.svg"
+	},
+	"browser_action": {
+		"default_icon": "icons/on.svg",
+		"default_title": "Script Switch: JS Enabled"
+	}
 }
